--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
             My Photo
         </title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="icon" href="https://cdn0.iconfinder.com/data/icons/bitcoin-cryptocurrency-lavender-vol-2-1/512/cypherpunk-512.png">
+
     </head>
     <body>
         <section>
